# deprecated_webos-initscripts

./: CMakeLists.txt  README.md
files/launch/: alignment.conf.in  bootmisc.conf.in  finish.conf.in  hostname.conf.in  mountall.conf.in  populate-volatile.conf.in  setup-environment.conf.in  start_update.conf.in  udev.conf.in
